# rust_os

./: Cargo.toml  codebook.toml
.cargo/: config.toml
.zed/: settings.json
src/: gdt.rs  interupt.rs  lib.rs  main.rs  qemu_exit.rs  serial.rs  vga_buffer.rs
src/interupt/: pic.rs
tests/: basic_boot.rs
tests/common/: mod.rs
tests/interupt/: double_fault.rs  page_fault.rs  stack_overflow.rs
