[package]
name = "rust_os"
version = "0.1.0"
edition = "2024"
authors = ["Richard Paterson <richy1623@gmail.com>"]

[dependencies]
bootloader = "0.9"
spin = { version = "0.10.0", features = ["lazy"] }
uart_16550 = "0.4.0"
x86_64 = "0.15.4"

[[bin]]
name = "rust_os"
test = false
bench = false

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 30 # (in seconds)

##### Tests #####
[[test]]
name = "double_fault"
path = "tests/interupt/double_fault.rs"
harness = false
[[test]]
name = "stack_overflow"
path = "tests/interupt/stack_overflow.rs"
harness = false
